# rsomics-bam-ampliconstats

./: Cargo.toml  README.md
benches/: bench.rs
src/: bed.rs  cli.rs  lib.rs  output.rs  stats.rs
tests/: compat.rs
tests/golden/: amplicons.bam  amplicons.bam.bai  primers.bed
