[package]
name = "rsomics-bam-ampliconstats"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-ampliconstats"
authors = ["Zane Leong <efd@live.com>"]
description = "Amplicon sequencing statistics from primer BED + BAM — Rust port of samtools ampliconstats"

[[bin]]
name = "rsomics-bam-ampliconstats"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1.7" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
noodles = { version = "0.110", features = ["bam"] }

[dev-dependencies]
tempfile = "3"
